--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,43 @@
-/* MENU BAR */
 
-div ul li a{
-   word-spacing: 5px;
+
+
+/* MENU BAR */
+nav.navbar{
+    background-color: #FF80AB;
+}
+section.hero.hero.d-flex{
+    background-color: #FF80AB;
+}
+.logokasirin{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
 
+
+
+/* HERO */
+/* section div div{
+    background-color: #FF80AB;
+} */
 
 /* ABOUT */
 .img-fluid{
     border-radius: 50%;
+}
+section#about{
+    padding-top: 50px;
+}
+/* FEATURES */
+section section{
+    padding-top: 50px;
+}
+
+/* FEATURES */
+/* .img-fluid{
+        width: 450px;
+        height: 450px;
+} */
+.img-fluid{
+    
 }
