--- a/css/templatemo-digital-trend.css
+++ b/css/templatemo-digital-trend.css
@@ -193,7 +193,7 @@ https://templatemo.com/tm-538-digital-trend
   a:hover, 
   a:active, 
   a:focus {
-    color: var(--hover);
+    color: var(--secondary-color);
     outline: none;
     text-decoration: none;
   }
@@ -204,7 +204,7 @@ https://templatemo.com/tm-538-digital-trend
   }
 
   .section-padding {
-    padding: 8em 0;
+    padding: 0em 0;
   }
   .section-padding-half {
     padding: 4em 0;
@@ -245,7 +245,7 @@ https://templatemo.com/tm-538-digital-trend
 
   .nav-link.active,
   .nav-link:hover {
-    color: var(--hover);
+    color: var(--secondary-color);
   }
 
   .navbar-expand-lg .navbar-nav .nav-link {
@@ -263,7 +263,7 @@ https://templatemo.com/tm-538-digital-trend
 
   .navbar-expand-lg .navbar-nav .nav-link.contact:hover,
   .navbar-expand-lg .navbar-nav .nav-link.contact.active {
-    background: var(--hover);
+    background: var(--secondary-color);
     color: var(--white-color);
   }
 
@@ -429,7 +429,7 @@ https://templatemo.com/tm-538-digital-trend
 
   .owl-theme .owl-dots .owl-dot.active span, 
   .owl-theme .owl-dots .owl-dot:hover span {
-    background: var(--hover);
+    background: var(--secondary-color);
   }
 
   .list-detail {
@@ -516,7 +516,7 @@ https://templatemo.com/tm-538-digital-trend
   }
 
   .blog-header-info a:hover {
-    color: var(--hover);
+    color: var(--secondary-color);
   }
 
   .blog-sidebar img {
@@ -566,7 +566,7 @@ https://templatemo.com/tm-538-digital-trend
   -----------------------------------------*/
 
   .site-footer {
-    background: var(--dark-color);
+    background: var(--primary-color);
     padding: 7em 0 6em 0;
   }
 
@@ -576,7 +576,7 @@ https://templatemo.com/tm-538-digital-trend
 
   .site-footer a:hover,
   .footer-icon {
-    color: var(--hover);
+    color: var(--secondary-color);
   }
 
   .footer-link li {
