--- a/css/templatemo-digital-trend.css
+++ b/css/templatemo-digital-trend.css
@@ -225,6 +225,17 @@ https://templatemo.com/tm-538-digital-trend
     MENU             
   -----------------------------------------*/
 
+  nav.navbar{
+    background-color: #FF80AB;
+}
+section.hero.hero.d-flex{
+    background-color: #FF80AB;
+}
+.logokasirin{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
   .navbar {
     background: var(--menu-bg);
     z-index: 2;
@@ -480,7 +491,16 @@ https://templatemo.com/tm-538-digital-trend
   /*---------------------------------------
       ABOUT            
   -----------------------------------------*/
-
+.img-fluid{
+    border-radius: 50%;
+}
+section#about{
+    padding-top: 50px;
+}
+/* FEATURES */
+section section{
+    padding-top: 50px;
+}
   .about {
     position: relative;
     overflow: hidden;
