--- a/css/templatemo-digital-trend.css
+++ b/css/templatemo-digital-trend.css
@@ -260,7 +260,12 @@ section.hero.hero.d-flex{
 
   .nav-link.active,
   .nav-link:hover {
-    color: var(--secondary-color);
+    border: 2px solid var(--secondary-color);
+    border-radius: var(--border-radius-large);
+    color: var(--white-color);
+    font-family: var(--font-bold-family);
+    padding: 0.6em 4em 0.8em 4em;
+    background-color: var(--secondary-color);
   }
 
   .navbar-expand-lg .navbar-nav .nav-link {
@@ -271,7 +276,7 @@ section.hero.hero.d-flex{
   .navbar-expand-lg .navbar-nav .nav-link.contact {
     border: 2px solid var(--secondary-color);
     border-radius: var(--border-radius-large);
-    color: var(--secondary-color);
+    color: var(--white-color);
     font-family: var(--font-bold-family);
     padding: 0.6em 2em 0.8em 2em;
   }
