--- a/css/templatemo-digital-trend.css
+++ b/css/templatemo-digital-trend.css
@@ -831,3 +831,81 @@ section section{
   .mb-1{
     color: var(--dark-color);
   }
+
+  /* SERVICES */
+  #services {
+    background: #fff;
+    background-size: cover;
+    padding: 80px 0 100px 0;
+  }
+  
+  #services .box {
+    padding: 50px 20px;
+    margin-bottom: 50px;
+    text-align: center;
+    border: 1px solid #e6e6e6;
+    height: 200px;
+    position: relative;
+    background: #fafafa;
+  }
+  
+  #services .icon {
+    position: absolute;
+    top: -36px;
+    left: calc(50% - 36px);
+    transition: 0.2s;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    width: 72px;
+    height: 72px;
+    background: #FF80AB;
+  }
+  
+  #services .icon a {
+    display: inline-block;
+    
+  }
+  
+  #services .icon i {
+    color: #fff;
+    font-size: 24px;
+    
+  }
+  
+  #services .box:hover .icon {
+    background: #fff;
+    border: 2px solid #FF80AB;
+  }
+  
+  #services .box:hover .icon i {
+    color: #FF80AB;
+  }
+  
+  #services .box:hover .icon a {
+    color: #FF80AB;
+  }
+  
+  #services .title {
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+  }
+  
+  #services .title a {
+    color: #111;
+  }
+  
+  #services .description {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  #services .section-title{
+    text-align: center;
+    padding-bottom: 50px;
+  }
